test/c2012/1.2.c
// RUN: %clang -std=c99 -pedantic-errors -fsyntax-only -ferror-limit=0 -Xclang -verify %s

int i = 0b101010;  // expected-error {{binary integer literals are a GNU extension}}
